[tool.poetry]
name = "HexOcean"
version = "0.1.0"
description = ""
authors = ["Jakub Wilk <wilkjakub64@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
flake8 = "^4.0.1"
Pillow = "^9.1.1"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
